# Programmentwurf2

Projekt2/: CMakeLists.txt
Projekt2/assets/logos/: junior_logo.txt  logo_files.txt  senior_logo.txt  test_logo.txt
Projekt2/include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
Projekt2/src/app/: CMakeLists.txt  main.cpp
Projekt2/src/lib/: CMakeLists.txt  developer.cpp  junior_developer.cpp  senior_developer.cpp
Projekt2/test/: CMakeLists.txt  developer_test.cpp
